--- a/index.html
+++ b/index.html
@@ -10,10 +10,39 @@
     <title> MS Dhoni </title>
     <link href="style/style.css" rel="stylesheet">
     <link rel="icon" href="img/icon.png">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu" rel="stylesheet">
 
   </head>
 
   <body>
+    <nav>
+
+      <a href=""><img src="img/back1.png" alt="back1"></a>
+
+      <input type="text" name="FirstName" value="">
+
+      <h1></h1>
+
+
+
+    </nav>
+
+    <div id="content">
+
+      <img src="img/poster.jpg" alt="dhoni" height="400px">
+
+      <p> M.S. Dhoni : The Untold Story </p>
+      <p> 2016 | Biography, Sport | 184 min </p>
+      <p>The untold story of Dhoni's journey from ticket collector to trophy collector - the world-cup-winning captain of the Indian Cricket Team.</p>
+      <hr>
+      <p><strong>Director: </strong>Neeraj Pandey <br><br>
+         <strong>Cast: </strong>Disha Patani, Kiara Advani, Sushant Singh Rajput, Bhoomika Chawla
+      </p>
+      <hr>
+      <p> Download Links </p>
+
+      <a id="download"> 720p [1.2 GB] </a>
+    </div>
 
 
   </body>
